fixed alignment between table and header

--- a/src/CSS/Github.css
+++ b/src/CSS/Github.css
@@ -25,9 +25,9 @@
   width: 10em;
 }
 .Github-table-container {
-  width: 94%;
   margin-top: 1%;
-  margin-left: 3%;
+  margin-left: 3.3em;
+  margin-right: 3.3em;
   margin-bottom: 4em;
   border: black solid 0.1em;
   background-color: aliceblue;
