--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -26,7 +26,7 @@
   justify-content: space-between;
 }
 .navbar-header-item {
-  margin-left: 0.5em;
+  margin-left: 1em;
   font-size: 3.3em;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
